Adjusts logo so it does not overflow fixes title overflow

--- a/style.css
+++ b/style.css
@@ -39,16 +39,19 @@ body {
 }
 .logo img {
     display: block;
-    width: 90%;
+    width: 30vw;
     margin: auto;
 }
 .title {
+    position: relative;
+    top: 40%;
+    vertical-align: top;
     width: 65%;
     background-color: yellow;
 }
 .title h1 {
     font-family: commando, arial, sans;
-    /* font-size: 5rem; */
+    font-size: 3.5rem;
     text-align: center;
 }
 .game-area-container {
@@ -64,20 +67,25 @@ body {
 .game-info {
     width: 20%;
     vertical-align: top;
-    height: 75%
+    height: 75%;
+    font-family: commando, arial, sans;
+    padding-top: 5%;
+    padding-left: 1%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; 
 }
 .game-container {
+    padding-top: 3%;
     width: 80%;
     height: 100%;
 }
 .game-area {
-    position: relative;
-    top: 5%;
     width: 80%;
+    margin: auto;
     height: 90%;
 }
 .card-container {
-    /*background-color: purple;*/
     width: 16.66%;
     height: 33.33%;
     float:left;
@@ -178,17 +186,8 @@ body {
     bottom: 0;
     z-index: -2;
 }
-
-.game-info {
-    font-family: commando, arial, sans;
-    padding-top: 5%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-}
 .games-played, .attempts, .accuracy {
-    font-size: 2.8rem;
+    font-size: 5vh;
     text-align: center;
     margin-bottom: 10%;
 }
@@ -199,7 +198,7 @@ body {
     color: yellow;
     text-shadow: 5px 1px 1px gray;
     margin: auto;
-    width: 25%;
+    width: 30%;
     padding: 10px 2px 5px 2px;
     border: 1px solid white;
 }
@@ -219,7 +218,7 @@ button.reset {
 .about-section {
     font-size: 1rem;
     margin: auto;
-    width: 50%;
+    width: 65%;
     height: 80%;
     font-family: sans-serif;
     position: relative;
@@ -305,6 +304,10 @@ button.reset {
     text-align: center;
     color: beige;
     font-size: 4em;
+}
+
+p.description {
+    font-size: 2rem;
 }
 
 @media only screen and (orientation: portrait){
